--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -1,9 +1,9 @@
 name: Hello World!
 
-# i want to trigger this workflow each minute on the minute
 on:
-  schedule:
-    - cron: '*/1 * * * *'
+  push:
+    branches:
+      - master
 
 jobs:
   hello_world_job:
